--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About me</h2>
-            <p>Hi, I'm Matt and I like to party. And I like movies. I was born on a beautiful early fall midday. I was born the day after a football game where my family made bets that my size and weight would match the score of the game. My  family's team lost 3-23, I turned out just fine, but that started my love for football. I now have an awesome wife who loves the University of Utah and I have alwasy been a fan of BYU, but I cheer for the U as well (sometimes due to fear for my life). This does creates a fun rivaly for us when they play. 
+            <p>Hi, I'm Matt and I like to party. And I like movies. If you don't catch that reference please go watch Hot Rod. I was born on a beautiful early fall midday. I was born the day after a football game where my family made bets that my size and weight would match the score of the game. My  family's team lost 3-23, I turned out just fine, but that started my love for football. I now have an awesome wife who loves the University of Utah and I have alwasy been a fan of BYU, but I cheer for the U as well (sometimes due to fear for my life). This does creates a fun rivaly for us when they play. 
             
             <p>I work at a software company as a Customer Success Manager. I am hoping to learn how to code and develop so I can increase my knowledge and skill set.
               
